# market-copilot

./: .gitignore
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_phase1_core_schema.py  0002_add_ingestion_run_source_locator.py  0003_normalization_job_queue_fields.py
backend/src/market_copilot/: __init__.py  settings.py
backend/src/market_copilot/api/: app.py  auth.py  dependencies.py  testing.py
backend/src/market_copilot/api/graphql/: context.py  mappers.py  resolvers.py  schema.py  types.py
backend/src/market_copilot/auth/: security.py
backend/src/market_copilot/db/: __init__.py  bootstrap.py  models.py  session.py
backend/src/market_copilot/domain/: __init__.py
backend/src/market_copilot/domain/congressional/: __init__.py  canonicalization.py  constants.py  normalization.py  raw_normalization.py  source_fallbacks.py  validation.py
backend/src/market_copilot/ingestion/: main.py
backend/src/market_copilot/normalization/: __init__.py  adapters.py
backend/src/market_copilot/repositories/: congressional.py
backend/src/market_copilot/scripts/: __init__.py  create_invite_code.py  create_user.py  ingest_eval_sample.py  ingest_failure_fixture_xml.py  ingest_fixture_xml.py  requeue_normalization_jobs.py  run_normalization_cycle.py
backend/src/market_copilot/services/: congressional.py
backend/src/market_copilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_auth_security.py  test_graphql_mappers.py  test_source_fallbacks.py
(+486 files in other folders)
