[project]
name = "market-copilot-backend"
version = "0.1.0"
description = "Backend foundation for Market Intelligence Copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "boto3>=1.39,<2.0",
  "fastapi>=0.115,<1.0",
  "openai>=1.68,<2.0",
  "pypdf>=5.5,<6.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "email-validator>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "strawberry-graphql[fastapi]>=0.270,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.alembic]
script_location = "migrations"
prepend_sys_path = ["src"]
